--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movie Image Gallery</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container-fluid">
+    <!-- First Row -->
+    <div class="row">
+      <!-- 12 images, each in col-sm-1 -->
+      <!-- Repeat the image div 12 times -->
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+    </div>
 
+    <!-- Second Row -->
+    <div class="row">
+      <!-- 6 images, each in col-sm-2 -->
+      <!-- Repeat the image div 6 times -->
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+    </div>
+
+    <!-- Third Row -->
+    <div class="row">
+      <!-- 3 images, each in col-sm-4 -->
+      <!-- Repeat the image div 3 times -->
+      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+    </div>
+
+    <!-- Fourth Row -->
+    <div class="row">
+      <!-- 1 image, occupying the full row, col-sm-12 -->
+      <div class="col-sm-12"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+    </div>
+  </div>
+
+  <!-- Bootstrap 5 JS (optional, for functionality like dropdowns) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
