--- a/main.html
+++ b/main.html
@@ -6,56 +6,59 @@
   <title>Movie Image Gallery</title>
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    img {
+      height: 100px;
+      width: 100px;
+    }
+  </style>
 </head>
 <body>
   <div class="container-fluid">
     <!-- First Row -->
     <div class="row">
-      <!-- 12 images, each in col-sm-1 -->
-      <!-- Repeat the image div 12 times -->
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-1"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <!-- 12 images with col-sm-1 -->
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
     </div>
 
     <!-- Second Row -->
     <div class="row">
-      <!-- 6 images, each in col-sm-2 -->
-      <!-- Repeat the image div 6 times -->
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-2"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <!-- 6 images with col-sm-2 -->
+      <div class="col-sm-2"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
     </div>
 
     <!-- Third Row -->
     <div class="row">
-      <!-- 3 images, each in col-sm-4 -->
-      <!-- Repeat the image div 3 times -->
-      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
-      <div class="col-sm-4"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <!-- 3 images with col-sm-4 -->
+      <div class="col-sm-4"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-4"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
+      <div class="col-sm-4"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
     </div>
 
     <!-- Fourth Row -->
     <div class="row">
-      <!-- 1 image, occupying the full row, col-sm-12 -->
-      <div class="col-sm-12"><img src="https://via.placeholder.com/100" alt="Movie Image" class="img-fluid"></div>
+      <!-- 1 image with col-sm-12 -->
+      <div class="col-sm-12"><img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Cute_dog.jpg" alt="Movie Image"></div>
     </div>
   </div>
 
-  <!-- Bootstrap 5 JS (optional, for functionality like dropdowns) -->
+  <!-- Bootstrap 5 JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
