--- a/main.html
+++ b/main.html
@@ -18,43 +18,43 @@
     <!-- First Row -->
     <div class="row">
       <!-- 12 images with col-sm-1 -->
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-1"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-1"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
     </div>
 
     <!-- Second Row -->
     <div class="row">
       <!-- 6 images with col-sm-2 -->
-      <div class="col-sm-2"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-2"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-2"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
     </div>
 
     <!-- Third Row -->
     <div class="row">
       <!-- 3 images with col-sm-4 -->
-      <div class="col-sm-4"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-4"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
-      <div class="col-sm-4"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
+      <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
+      <div class="col-sm-4"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
     </div>
 
     <!-- Fourth Row -->
     <div class="row">
       <!-- 1 image with col-sm-12 -->
-      <div class="col-sm-12"><img src="https://freepngimg.com/thumb/dog/8-dog-png-image-picture-download-dogs.png" alt="Movie Image"></div>
+      <div class="col-sm-12"><img src="https://goswift.in/img/logo.png" alt="Movie Image"></div>
     </div>
   </div>
 
